--- a/style.css
+++ b/style.css
@@ -1,22 +1,27 @@
 
 body{
-    background-color: rgb(45, 45, 45);
-    font-family: Ubuntu Mono, Righteous,Verdana, Arial;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    background: linear-gradient(to left, crimson, rgb(209, 116, 116))
 }
+    font-family: Ubuntu Mono, Righteous,Verdana, Arial
+
 
 h1{
     color:white
 }
 
 h2{
-    color:white
+    color:rgb(0, 0, 0)
 }
 
 p{
-    color:white
+    color:rgb(0, 0, 0)
 }
  pre{
-    color:white
+    color:rgb(0, 0, 0)
  }
 
 h1{
@@ -35,14 +40,22 @@ a{
     border-style: solid;
     color: crimson;
     padding: 5px;
+    display:block inline;
+    background-color: rgb(28, 28, 28);
+    font-size: larger;
 }
+
+a:hover{ 
+    background-color: rgb(79, 72, 72);
+}
+
+
 
 .navbar ul{
     list-style-type: none;
-    background-color: rgb(28, 28, 28);
-    padding: 0px;
+    background-color:rgb(28, 28, 28);
     overflow: hidden;
-}
+   }
 .navbar a{
     color: rgb(255, 255, 255);
     text-decoration: none;
@@ -52,8 +65,64 @@ a{
     text-align: center;
 }
 .navbar a:hover{
-    background-color: rgb(110, 109, 109);
+    background-color: rgb(122, 122, 122);
 }
 .navbar li{
     float: left;
+}
+
+html { overflow-y: scroll; }
+
+.photo{ 
+    position: relative;
+    right: 100px;
+    bottom: 25px
+}
+
+.photo2{
+    position: relative;
+    bottom: 25px;
+    right: 100px;
+}
+
+.Extras1{
+    position: relative;
+    bottom: 25px;
+    right: 180px;
+}
+
+.Extras2{
+    position: relative;
+    bottom: 25px;
+    right: 345px;
+}
+
+.Creation1{
+    position: relative;
+    bottom: 25px;
+    right: 300px;
+}
+
+.Creation2{
+    position: relative;
+    bottom: 25px;
+    right: 300px;
+}
+
+.Creation3{
+    position: relative;
+    bottom: 25px;
+    right: 230px;
+}
+
+.channel{
+    position: relative;
+    bottom: 25px;
+    right: 120px;
+}
+
+.Extras{
+    position: relative;
+    bottom: 25px;
+    right: 120px;
 }
