--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 
+
+
 body{
     width: 100%;
     height: 100%;
@@ -125,4 +127,9 @@ html { overflow-y: scroll; }
     position: relative;
     bottom: 25px;
     right: 120px;
+}
+
+#image{
+    width: 800px;
+    height: 550px;
 }
