--- a/style.css
+++ b/style.css
@@ -159,6 +159,16 @@ input[type=text], select, textarea {
     background-color: #020202;
   }
   
+  input[type=email], select, textarea {
+    width: 100%; 
+    padding: 12px;  
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical 
+  }
   
   .container {
     border-radius: 5px;
